fixes overflow on sidebar control groups

--- a/packages/tesseract-explorer/src/style/PanelQuery.scss
+++ b/packages/tesseract-explorer/src/style/PanelQuery.scss
@@ -23,6 +23,7 @@
     }
 
     .details-content {
+      box-sizing: border-box;
       margin: -5px;
       padding: 5px;
       max-height: 200px;
